Increased top for  menu-container.active to prevent overlapping with header

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -99,7 +99,7 @@ body.light .menu-container {
   /* Menu items */
   .menu-container {
     position: fixed;
-    top: 4.75rem;
+    top: 4.8rem;
     right:0;
     width: 20%;
     background-color: rgba(255, 255, 255, 0.3); /* Slightly transparent white */
